force-app/main/default/objects/KPI__c/fields/AppliedRole__c.field-meta.xml
<CustomField>
    <fullName>AppliedRole__c</fullName>
    <label>APPLIED ROLES</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AppliedOrganization</valueSetName>
    </valueSet>
</CustomField>