force-app/main/default/objects/KPI__c/fields/BonusIncentivePolicy__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentivePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bonus &amp; Incentive Policy</label>
    <referenceTo>BonusIncentivesPolicy__c</referenceTo>
    <relationshipLabel>KPI</relationshipLabel>
    <relationshipName>KPI</relationshipName>
    <type>Lookup</type>
</CustomField>