force-app/main/default/objects/KPI__c/fields/CaculationType__c.field-meta.xml
<CustomField>
    <fullName>CaculationType__c</fullName>
    <label>CALCULATION TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Counting(More Number is The better)</fullName>
            </value>
            <value>
                <fullName>Negative Counting(Less Number is The better)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>