force-app/main/default/objects/KPI__c/fields/Frequecy__c.field-meta.xml
<CustomField>
    <fullName>Frequecy__c</fullName>
    <label>FREQUENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>