force-app/main/default/objects/KPI__c/fields/HRPolicyID__c.field-meta.xml
<CustomField>
    <fullName>HRPolicyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR POLICY ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HRStandard__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>HRStandard__c</referenceTo>
    <relationshipLabel>KPI</relationshipLabel>
    <relationshipName>KPI</relationshipName>
    <type>Lookup</type>
</CustomField>