force-app/main/default/objects/KPI__c/fields/KPICategory__c.field-meta.xml
<CustomField>
    <fullName>KPICategory__c</fullName>
    <label>KPI CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KPICategory</valueSetName>
    </valueSet>
</CustomField>