force-app/main/default/objects/KPI__c/fields/PerformanceDataSource__c.field-meta.xml
<CustomField>
    <fullName>PerformanceDataSource__c</fullName>
    <label>PERFORMANCE DATA SOURCE</label>
    <type>Url</type>
</CustomField>