force-app/main/default/objects/KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPIName__c</columns>
    <columns>KPICategory__c</columns>
    <columns>Active__c</columns>
    <columns>HRPolicyID__c</columns>
    <columns>AppliedRole__c</columns>
    <columns>Frequecy__c</columns>
    <columns>Goal__c</columns>
    <columns>HowToMeasure__c</columns>
    <columns>HowKPIResultUsed__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>